--- a/newsRef/newsRef_8.html
+++ b/newsRef/newsRef_8.html
@@ -1,4 +1,4 @@
-<div class="contBox-min">
+<div class="contBox-min" id="page">
     <!-- 新聞內頁 -->
     <div class="newsRef_box">
         <div class="newsRef_cnt">
@@ -75,19 +75,46 @@
                 </div>
                 <p>Huỳnh Phong | 12:35 28/07/2021</p>
             </div>
-
-
-
-
         </div>
-        <div class="newsRef_menu">
-            <div class="newsRef_hot" id="newsRef_hot">
+
+        
+        <div class="newsCnt_menu">
+            <div>
                 <div class="mainMsg-title">Tin hot</div>
-                <ul></ul>
+                <div class="newsCnt_scroll">
+                    <ul>
+                        <template v-for="(item,index) in newsMenu.news_r">
+                            <li v-if="localNum != index+6">
+                                <a :href="reHref(true,index)">
+                                    <div class="img" :style="getbgi(item.img)"></div>
+                                    <p>{{item.title}}</p>
+                                </a>
+                            </li>
+                        </template>
+                    </ul>
+                </div>    
             </div>
-            <div class="newsRef_imp" id="newsRef_imp">
+            <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
-                <ul></ul>
+                <div class="newsCnt_scroll">
+                    <ul>
+                        <li>
+                            <a href="#/lottery?p=1">
+                                <div class="img" :style="getbgi(newsMenu.news_t.img)"></div>
+                                <p>{{newsMenu.news_t.title}}</p>
+                            </a>
+                        </li>
+    
+                        <template v-for="(item,index) in newsMenu.news_b">
+                            <li v-if="localNum != index+2">
+                                <a :href="reHref(false,index)">
+                                    <div class="img" :style="getbgi(item.img)"></div>
+                                    <p>{{item.title}}</p>
+                                </a>
+                            </li>
+                        </template>
+                    </ul>
+                </div>  
             </div>
         </div>
     </div>
