--- a/newsRef/newsRef_1.html
+++ b/newsRef/newsRef_1.html
@@ -129,7 +129,7 @@
                 <div class="newsCnt_scroll">
                     <ul>
                         <template v-for="(item,index) in newsMenu.news_r">
-                            <li>
+                            <li v-if="newsRefNum != index+1">
                                 <a :href="reHref(true,index)">
                                     <div class="img" :style="getbgi(item.img)"></div>
                                     <p>{{item.title}}</p>
@@ -143,14 +143,15 @@
                 <div class="mainMsg-title">Tin quan trọng</div>
                 <div class="newsCnt_scroll">
                     <ul>
-                        <li>
+                        <li v-if="lotteryNum != 1">
                             <a href="#/lottery?p=1">
                                 <div class="img" :style="getbgi(newsMenu.news_t.img)"></div>
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
+    
                         <template v-for="(item,index) in newsMenu.news_b">
-                            <li v-if="localNum != index+2">
+                            <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
                                     <div class="img" :style="getbgi(item.img)"></div>
                                     <p>{{item.title}}</p>
