--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
         },
         methods: {
             goTop() {
+                alert("OK")
                 window.scrollTo({
                     top: 0,
                     behavior: "smooth"
