--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                                 </div>
                             </li>
                             <li class="btn_linear_c1" @click="qrHref('zalo')">
-                                <a href="blankPage/qrcode.html" target="_blank">
+                                <a href="page/qrcode.html" target="_blank">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-zalo.png">
                                     </div>
                                 </a>   
                             </li>
                             <li class="btn_linear_c1" @click="qrHref('tg')">
-                                <a href="blankPage/qrcode.html" target="_blank">
+                                <a href="page/qrcode.html" target="_blank">
                                     <div class="btn_cnt">
                                         <img src="images/icon/icon-tg.png">
                                     </div>
