--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                     <div class="hd_link">
                         <ul>
                             <li class="btn_linear_c1 hd_service">
-                                <div class="btn_cnt">
-                                    <img src="images/icon/icon-email.png">
-                                </div>
-                                <p>EMAIL</p>
+                                <a href="mailto:redsinsue@gmail.com">
+                                    <div class="btn_cnt">
+                                        <img src="images/icon/icon-email.png">
+                                    </div>
+                                    <p>EMAIL</p>
+                                </a>   
                             </li>
                             <li class="btn_linear_c1">
                                 <div class="btn_cnt">
